--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.scss">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
     <section class="hero">
@@ -28,6 +29,47 @@
         </div>
     </section>
 
+    <section class="games games--eldenring">
+        <div data-aos="fade-left" class="container">
+            <div class="games__detail">
+                <h2 class="games__detail__title">Elden Ring Shadow Of The Erdtree</h2>
+                <p class="games__detail__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores assumenda repellat placeat temporibus, natus officiis mollitia a laboriosam obcaecati veniam vero esse reprehenderit. Fugiat error voluptatem repellendus molestias rerum ducimus?</p>
+            </div>
+            <img src="images/elden_ring.jpg" alt="elden ring shadow of the erdtree" class="games__img">
+        </div>
+    </section>
+
+    <section class="games games--left-img games--wukong">
+        <div data-aos="fade-right" class="container">
+            <div class="games__detail">
+                <h2 class="games__detail__title">Black Myth: Wukong</h2>
+                <p class="games__detail__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores assumenda repellat placeat temporibus, natus officiis mollitia a laboriosam obcaecati veniam vero esse reprehenderit. Fugiat error voluptatem repellendus molestias rerum ducimus?</p>
+            </div>
+            <img src="images/black_myth_wukong.png" alt="black_myth_wukong" class="games__img">
+        </div>
+    </section>
+    
+    <section class="games games--final-fantasy">
+        <div data-aos="fade-left" class="container">
+            <div class="games__detail">
+                <h2 class="games__detail__title">Final Fantasy VII Rebirth</h2>
+                <p class="games__detail__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores assumenda repellat placeat temporibus, natus officiis mollitia a laboriosam obcaecati veniam vero esse reprehenderit. Fugiat error voluptatem repellendus molestias rerum ducimus?</p>
+            </div>
+            <img src="images/final_fantasy_vii.jpg" alt="final_fantasy_vii" class="games__img">
+        </div>
+    </section>
+    
+    <section class="games games--left-img games--astro-bots">
+        <div data-aos="fade-right" class="container">
+            <div class="games__detail">
+                <h2 class="games__detail__title">Astro Bots</h2>
+                <p class="games__detail__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores assumenda repellat placeat temporibus, natus officiis mollitia a laboriosam obcaecati veniam vero esse reprehenderit. Fugiat error voluptatem repellendus molestias rerum ducimus?</p>
+            </div>
+            <img src="images/astrobots.jpg" alt="astrobots" class="games__img">
+        </div>
+    </section>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html>
