--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,12 @@
 <body>
     <section class="hero">
         <div class="container">
-            <div class="hero__contagem">
+            <div id="contagem" class="hero__contagem">
                 <p>Contagem regrassiva para o ano novo!!</p>
                 <span id="contador">00d 00h 00m 00s</span>
             </div>
 
-            <div class="hero__anonovo">
+            <div id="anonovo" class="hero__anonovo">
                 <p>Feliz ano novo!!!</p>
             </div>
 
