atualizando para aniversário

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercicio modulo 22</title>
+    <title>Convite de Aniversário</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,57 +15,69 @@
     <section class="hero">
         <div class="container">
             <div id="contagem" class="hero__contagem">
-                <p>Contagem regrassiva para o ano novo!!</p>
+                <p>Contagem regressiva para o meu aniversário!</p>
                 <span id="contador">00d 00h 00m 00s</span>
             </div>
 
-            <div id="anonovo" class="hero__anonovo">
-                <p>Feliz ano novo!!!</p>
+            <div id="aniversario" class="hero__expirou">
+                <p>Evento Expirou!</p>
             </div>
 
-            <div class="hero__info">
-                <p>Confira abaixo os melhores lançamentos do ano</p>
+            <div class="infos-bar">
+                <ul class="infos-bar__infos">
+                    <li class="infos-bar__infos__item">
+                        <b>Localização</b>
+                        Arena Nova União - Centro - Belo Horizonte
+                    </li>
+                    <li class="infos-bar__infos__item">
+                        <b>Quando</b>
+                        08/08/2025 às 22h
+                    </li>
+                </ul>
+                <buton class="btn btn--primary">
+                    Garanta sua vaga
+                </buton>
             </div>
         </div>
     </section>
 
-    <section class="games games--eldenring">
+    <section class="details details--churrasco">
         <div data-aos="fade-left" class="container">
-            <div class="games__detail">
-                <h2 class="games__detail__title">Elden Ring Shadow Of The Erdtree</h2>
-                <p class="games__detail__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores assumenda repellat placeat temporibus, natus officiis mollitia a laboriosam obcaecati veniam vero esse reprehenderit. Fugiat error voluptatem repellendus molestias rerum ducimus?</p>
+            <div class="details__detail">
+                <h2 class="details__detail__title">Churrasco Delicioso</h2>
+                <p class="details__detail__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores assumenda repellat placeat temporibus, natus officiis mollitia a laboriosam obcaecati veniam vero esse reprehenderit. Fugiat error voluptatem repellendus molestias rerum ducimus?</p>
             </div>
-            <img src="images/elden_ring.jpg" alt="elden ring shadow of the erdtree" class="games__img">
+            <img src="./images/churrasco.jpg" alt="churrasco" class="details__img">
         </div>
     </section>
 
-    <section class="games games--left-img games--wukong">
+    <section class="details details--left-img details--musica">
         <div data-aos="fade-right" class="container">
-            <div class="games__detail">
-                <h2 class="games__detail__title">Black Myth: Wukong</h2>
-                <p class="games__detail__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores assumenda repellat placeat temporibus, natus officiis mollitia a laboriosam obcaecati veniam vero esse reprehenderit. Fugiat error voluptatem repellendus molestias rerum ducimus?</p>
+            <div class="details__detail">
+                <h2 class="details__detail__title">Música e Dança</h2>
+                <p class="details__detail__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores assumenda repellat placeat temporibus, natus officiis mollitia a laboriosam obcaecati veniam vero esse reprehenderit. Fugiat error voluptatem repellendus molestias rerum ducimus?</p>
             </div>
-            <img src="images/black_myth_wukong.png" alt="black_myth_wukong" class="games__img">
+            <img src="./images/musica.jpeg" alt="musica" class="details__img">
         </div>
     </section>
     
-    <section class="games games--final-fantasy">
+    <section class="details details--bolo">
         <div data-aos="fade-left" class="container">
-            <div class="games__detail">
-                <h2 class="games__detail__title">Final Fantasy VII Rebirth</h2>
-                <p class="games__detail__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores assumenda repellat placeat temporibus, natus officiis mollitia a laboriosam obcaecati veniam vero esse reprehenderit. Fugiat error voluptatem repellendus molestias rerum ducimus?</p>
+            <div class="details__detail">
+                <h2 class="details__detail__title">Bolo de Aniversário</h2>
+                <p class="details__detail__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores assumenda repellat placeat temporibus, natus officiis mollitia a laboriosam obcaecati veniam vero esse reprehenderit. Fugiat error voluptatem repellendus molestias rerum ducimus?</p>
             </div>
-            <img src="images/final_fantasy_vii.jpg" alt="final_fantasy_vii" class="games__img">
+            <img src="./images/bolo.jpg" alt="bolo" class="details__img">
         </div>
     </section>
     
-    <section class="games games--left-img games--astro-bots">
+    <section class="details details--left-img details--jogos">
         <div data-aos="fade-right" class="container">
-            <div class="games__detail">
-                <h2 class="games__detail__title">Astro Bots</h2>
-                <p class="games__detail__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores assumenda repellat placeat temporibus, natus officiis mollitia a laboriosam obcaecati veniam vero esse reprehenderit. Fugiat error voluptatem repellendus molestias rerum ducimus?</p>
+            <div class="details__detail">
+                <h2 class="details__detail__title">Diversão com Jogos</h2>
+                <p class="details__detail__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores assumenda repellat placeat temporibus, natus officiis mollitia a laboriosam obcaecati veniam vero esse reprehenderit. Fugiat error voluptatem repellendus molestias rerum ducimus?</p>
             </div>
-            <img src="images/astrobots.jpg" alt="astrobots" class="games__img">
+            <img src="./images/jogos.png" alt="jogos" class="details__img">
         </div>
     </section>
 
